# weather-app

./: .cache.sqlite  .env  .env.example  .gitignore  .swcrc  README.md  csv_to_db.py  db.sqlite3  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tailwind.config.ts  vite.config.ts  webpack.config.js
api/: urls.py
api/users/: middleware.py  models.py  views.py
api/users/migrations/: 0001_initial.py
api/weather/: .cache.sqlite  admin.py  api.py  apps.py  data.py  models.py  serializers.py  urls.py  views.py
api/weather/migrations/: 0001_initial.py
app/: root.tsx
app/assets/: images.js
app/components/: Forecast.tsx  Search.tsx  Sidebar.tsx  WeatherInfo.tsx
app/routes/: _index.tsx  auth.login.tsx  auth.signup.tsx  auth.tsx
app/services/: authentication.ts  weatherService.ts
app/utils/: cookie.ts
conf/: settings.py  urls.py  views.py
src/: App.jsx  index.css  index.jsx
src/assets/: icons.js  images.js
src/components/: DailyForecast.jsx  HourlyForecast.jsx  Search.jsx  SideBar.jsx
src/pages/: Home.jsx  Weather.jsx
templates/: index.html
